使用 Colab 创建而成

--- a/ch02/01_main-chapter-code/ch02.ipynb
+++ b/ch02/01_main-chapter-code/ch02.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/helloworld-0/LLMs-from-scratch/blob/main/ch02/01_main-chapter-code/ch02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "d95f841a-63c9-41d4-aea1-496b3d2024dd",
       "metadata": {
         "id": "d95f841a-63c9-41d4-aea1-496b3d2024dd"
@@ -57,11 +47,11 @@
       "execution_count": 1,
       "id": "4d1305cf-12d5-46fe-a2c9-36fb71c5b3d3",
       "metadata": {
-        "id": "4d1305cf-12d5-46fe-a2c9-36fb71c5b3d3",
-        "outputId": "fbaa9ed1-64a2-4b42-ae63-e797b972f6c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4d1305cf-12d5-46fe-a2c9-36fb71c5b3d3",
+        "outputId": "4a5a8d63-4287-4d1c-c3da-36ac6cff88f7"
       },
       "outputs": [
         {
@@ -207,12 +197,12 @@
       "execution_count": 2,
       "id": "40f9d9b1-6d32-485a-825a-a95392a86d79",
       "metadata": {
-        "id": "40f9d9b1-6d32-485a-825a-a95392a86d79",
-        "outputId": "495626f4-9f6c-4377-f947-cc8634ae3914",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
-        }
+          "height": 73
+        },
+        "id": "40f9d9b1-6d32-485a-825a-a95392a86d79",
+        "outputId": "a8c7f093-5285-4c41-f6b2-5c2fd3d3cf31"
       },
       "outputs": [
         {
@@ -307,14 +297,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "id": "8a769e87-470a-48b9-8bdb-12841b416198",
       "metadata": {
-        "id": "8a769e87-470a-48b9-8bdb-12841b416198",
-        "outputId": "2401ed72-42e3-42f4-89ac-00b915ba5267",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8a769e87-470a-48b9-8bdb-12841b416198",
+        "outputId": "85d1888e-9e22-4a89-8b4b-b44639c55c62"
       },
       "outputs": [
         {
@@ -322,7 +312,7 @@
           "name": "stdout",
           "text": [
             "Total number of character: 20479\n",
-            "I HAD always thought Jack Gisburn rather a cheap genius--though a good fellow enough--so it was no \n"
+            "I HAD always thought Jack Gisburn rather a cheap genius--though a good fellow enough--so\n"
           ]
         }
       ],
@@ -331,7 +321,7 @@
         "    raw_text = f.read()\n",
         "\n",
         "print(\"Total number of character:\", len(raw_text))\n",
-        "print(raw_text[:99])"
+        "print(raw_text[:88])"
       ]
     },
     {
@@ -348,14 +338,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 9,
       "id": "737dd5b0-9dbb-4a97-9ae4-3482c8c04be7",
       "metadata": {
-        "id": "737dd5b0-9dbb-4a97-9ae4-3482c8c04be7",
-        "outputId": "ac7fcf30-06f6-44e0-e40b-8a3f075970d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "737dd5b0-9dbb-4a97-9ae4-3482c8c04be7",
+        "outputId": "9794c882-9345-435a-b8b4-088abfd83494"
       },
       "outputs": [
         {
@@ -387,14 +377,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "id": "ea02489d-01f9-4247-b7dd-a0d63f62ef07",
       "metadata": {
-        "id": "ea02489d-01f9-4247-b7dd-a0d63f62ef07",
-        "outputId": "9bedda73-dc0a-4836-e960-234331493864",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ea02489d-01f9-4247-b7dd-a0d63f62ef07",
+        "outputId": "6a3dc141-a95b-4bda-d5c8-681a2d72b71e"
       },
       "outputs": [
         {
@@ -423,14 +413,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 11,
       "id": "4d8a6fb7-2e62-4a12-ad06-ccb04f25fed7",
       "metadata": {
-        "id": "4d8a6fb7-2e62-4a12-ad06-ccb04f25fed7",
-        "outputId": "3403ae01-84af-4f42-835d-ccac00834f8f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4d8a6fb7-2e62-4a12-ad06-ccb04f25fed7",
+        "outputId": "6d7117a4-ea7a-44c4-c5a0-6d3600b83912"
       },
       "outputs": [
         {
@@ -459,16 +449,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "ed3a9467-04b4-49d9-96c5-b8042bcf8374",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "ed3a9467-04b4-49d9-96c5-b8042bcf8374",
-        "outputId": "1294846a-807c-4942-93f5-6eb4ecb221fd"
+        "outputId": "f16e07d6-f87d-4258-9876-f14fafabc695"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "['Hello', ',', 'world', '.', 'Is', 'this', '--', 'a', 'test', '?']\n"
           ]
@@ -504,14 +497,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 13,
       "id": "8c567caa-8ff5-49a8-a5cc-d365b0a78a99",
       "metadata": {
-        "id": "8c567caa-8ff5-49a8-a5cc-d365b0a78a99",
-        "outputId": "702a8058-64c4-4daa-e8d8-492c4624ae14",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8c567caa-8ff5-49a8-a5cc-d365b0a78a99",
+        "outputId": "e38c979d-8074-4d62-a236-4cdc9934c3b7"
       },
       "outputs": [
         {
@@ -540,16 +533,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "35db7b5e-510b-4c45-995f-f5ad64a8e19c",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "35db7b5e-510b-4c45-995f-f5ad64a8e19c",
-        "outputId": "6a851797-9152-47f4-896a-2dcad8a05fbb"
+        "outputId": "372bcef3-10cc-4e16-f628-5aa81f332601"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "4690\n"
           ]
@@ -601,14 +597,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 15,
       "id": "7fdf0533-5ab6-42a5-83fa-a3b045de6396",
       "metadata": {
-        "id": "7fdf0533-5ab6-42a5-83fa-a3b045de6396",
-        "outputId": "f76ab539-2383-43a4-ee5e-414961f36b48",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7fdf0533-5ab6-42a5-83fa-a3b045de6396",
+        "outputId": "2c1c2dd3-d079-458a-bcc5-9e7fe1a2dc3d"
       },
       "outputs": [
         {
@@ -628,7 +624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 16,
       "id": "77d00d96-881f-4691-bb03-84fec2a75a26",
       "metadata": {
         "id": "77d00d96-881f-4691-bb03-84fec2a75a26"
@@ -650,14 +646,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 17,
       "id": "e1c5de4a-aa4e-4aec-b532-10bb364039d6",
       "metadata": {
-        "id": "e1c5de4a-aa4e-4aec-b532-10bb364039d6",
-        "outputId": "ef0980a2-95a2-4041-c0e6-87147fda515e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e1c5de4a-aa4e-4aec-b532-10bb364039d6",
+        "outputId": "d288a521-d6ee-4b37-c522-1c913f957d08"
       },
       "outputs": [
         {
@@ -757,7 +753,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "f531bf46-7c25-4ef8-bff8-0d27518676d5",
       "metadata": {
         "id": "f531bf46-7c25-4ef8-bff8-0d27518676d5"
@@ -819,16 +815,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "647364ec-7995-4654-9b4a-7607ccf5f1e4",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "647364ec-7995-4654-9b4a-7607ccf5f1e4",
-        "outputId": "d633d9e7-8d10-43c1-e508-811e6e96eb96"
+        "outputId": "95b8892f-41ae-4b0c-c8b1-879f208fabcd"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[1, 56, 2, 850, 988, 602, 533, 746, 5, 1126, 596, 5, 1, 67, 7, 38, 851, 1108, 754, 793, 7]\n"
           ]
@@ -839,6 +838,7 @@
         "\n",
         "text = \"\"\"\"It's the last he painted, you know,\"\n",
         "           Mrs. Gisburn said with pardonable pride.\"\"\"\n",
+        "\n",
         "ids = tokenizer.encode(text)\n",
         "print(ids)"
       ]
@@ -1245,7 +1245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "ede1d41f-934b-4bf4-8184-54394a257a94",
       "metadata": {
         "id": "ede1d41f-934b-4bf4-8184-54394a257a94"
@@ -1257,18 +1257,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "48967a77-7d17-42bf-9e92-fc619d63a59e",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "48967a77-7d17-42bf-9e92-fc619d63a59e",
-        "outputId": "d36fde06-8914-49ca-dcad-43b8afc221f3"
+        "outputId": "07945dbf-2142-4017-92e0-0d8bdf1de499"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "tiktoken version: 0.7.0\n"
+            "tiktoken version: 0.12.0\n"
           ]
         }
       ],
@@ -1281,7 +1284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "6ad3312f-a5f7-4efc-9d7d-8ea09d7b5128",
       "metadata": {
         "id": "6ad3312f-a5f7-4efc-9d7d-8ea09d7b5128"
@@ -1293,16 +1296,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "id": "5ff2cd85-7cfb-4325-b390-219938589428",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "5ff2cd85-7cfb-4325-b390-219938589428",
-        "outputId": "c07705c6-f2cb-420d-83bf-35013bb08cd1"
+        "outputId": "df3d0673-b3eb-4974-b456-96dcce139848"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[15496, 11, 466, 345, 588, 8887, 30, 220, 50256, 554, 262, 4252, 18250, 8812, 2114, 1659, 617, 34680, 27271, 13]\n"
           ]
@@ -1310,8 +1316,7 @@
       ],
       "source": [
         "text = (\n",
-        "    \"Hello, do you like tea? <|endoftext|> In the sunlit terraces\"\n",
-        "     \"of someunknownPlace.\"\n",
+        "    \"Hello, do you like tea? <|endoftext|>\"\n",
         ")\n",
         "\n",
         "integers = tokenizer.encode(text, allowed_special={\"<|endoftext|>\"})\n",
@@ -2351,8 +2356,7 @@
     },
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     }
   },
   "nbformat": 4,
